{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 19,
  "lineage": "0ea91e42-0064-e935-3567-61ec3897d3e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "leetnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daa55c877555da1c",
            "arn": "arn:aws:ec2:us-east-1:375459824176:elastic-ip/eipalloc-0daa55c877555da1c",
            "association_id": "eipassoc-020933bb46dcab522",
            "domain": "vpc",
            "id": "eipalloc-0daa55c877555da1c",
            "instance": "i-0c7c505e8f17cc345",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0505ada929d042b22",
            "private_dns": "ip-10-0-1-66.ec2.internal",
            "private_ip": "10.0.1.66",
            "public_dns": "ec2-52-7-160-225.compute-1.amazonaws.com",
            "public_ip": "52.7.160.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "leetnode-eip"
            },
            "tags_all": {
              "Name": "leetnode-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.leetnode",
            "aws_key_pair.leetnode",
            "aws_security_group.leetnode",
            "aws_subnet.leetnode",
            "aws_vpc.leetnode",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "leetnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc0d6e8d70ab2d42",
            "arn": "arn:aws:ec2:us-east-1:375459824176:instance/i-0c7c505e8f17cc345",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7c505e8f17cc345",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "leetnode-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0505ada929d042b22",
            "private_dns": "ip-10-0-1-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.66",
            "public_dns": "ec2-54-174-194-232.compute-1.amazonaws.com",
            "public_ip": "54.174.194.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09db3945208f68620",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08dd7504dd71d863c",
            "tags": {
              "Name": "leetnode"
            },
            "tags_all": {
              "Name": "leetnode"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad1443551d263ef3"
            ]
          },
          "dependencies": [
            "aws_key_pair.leetnode",
            "aws_security_group.leetnode",
            "aws_subnet.leetnode",
            "aws_vpc.leetnode",
            "data.aws_ami.ubuntu"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "leetnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375459824176:internet-gateway/igw-01096cb4285ce072e",
            "id": "igw-01096cb4285ce072e",
            "owner_id": "375459824176",
            "tags": {
              "Name": "leetnode-igw"
            },
            "tags_all": {
              "Name": "leetnode-igw"
            },
            "vpc_id": "vpc-0f8728f442f4f4d1f"
          },
          "dependencies": [
            "aws_vpc.leetnode"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "leetnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375459824176:route-table/rtb-0392a9aef1d109f25",
            "id": "rtb-0392a9aef1d109f25",
            "owner_id": "375459824176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01096cb4285ce072e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "leetnode-rt"
            },
            "tags_all": {
              "Name": "leetnode-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8728f442f4f4d1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.leetnode",
            "aws_vpc.leetnode"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "leetnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9aec48a4056a2e7",
            "route_table_id": "rtb-0392a9aef1d109f25",
            "subnet_id": "subnet-08dd7504dd71d863c"
          },
          "dependencies": [
            "aws_internet_gateway.leetnode",
            "aws_route_table.leetnode",
            "aws_subnet.leetnode",
            "aws_vpc.leetnode"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "leetnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375459824176:security-group/sg-0ad1443551d263ef3",
            "description": "LeetNode: allow SSH, HTTP, HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad1443551d263ef3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "leetnode-sg",
            "name_prefix": "",
            "owner_id": "375459824176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leetnode-sg"
            },
            "tags_all": {
              "Name": "leetnode-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8728f442f4f4d1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.leetnode"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "leetnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375459824176:subnet/subnet-08dd7504dd71d863c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08dd7504dd71d863c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375459824176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "leetnode-subnet"
            },
            "tags_all": {
              "Name": "leetnode-subnet"
            },
            "vpc_id": "vpc-0f8728f442f4f4d1f"
          },
          "dependencies": [
            "aws_vpc.leetnode"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "leetnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375459824176:vpc/vpc-0f8728f442f4f4d1f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-007dbf8cbac8e366c",
            "default_route_table_id": "rtb-05697d50911bb175c",
            "default_security_group_id": "sg-078d9c33db7eb55f5",
            "dhcp_options_id": "dopt-0e5bc8287f53b7618",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8728f442f4f4d1f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05697d50911bb175c",
            "owner_id": "375459824176",
            "tags": {
              "Name": "leetnode-vpc"
            },
            "tags_all": {
              "Name": "leetnode-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}